[package]
name = "scrub_log"
version = "0.1.0"
authors = ["Geoffrey Lalonde <lalondegeoffrey@gmail.com>"]
edition = "2018"
description = """
Log formatter with colors, file locations, program run duration.
"""
repository = "https://github.com/glalonde/scrub_log"
license = "MIT"
categories = ["development-tools::debugging"]

[dependencies]
log = { version = "0.4.8", features = ["std"] }
ansi_term = "0.12"
