[package]
name = "scrub_log"
version = "0.2.1"
authors = ["Geoffrey Lalonde <lalondegeoffrey@gmail.com>"]
edition = "2018"
description = """
Log formatter with colors, file locations, program run duration.
"""
repository = "https://github.com/glalonde/scrub_log"
license = "MIT"
readme = "README.md"
categories = ["development-tools::debugging"]

[dependencies]
log = { version = "0.4.8", features = ["std"] }
ansi_term = "0.12"
env_logger = "0.7"

[dev-dependencies]
gflags = "0.3"
